--- a/exercises/client-navbars/navbar1.html
+++ b/exercises/client-navbars/navbar1.html
@@ -3,20 +3,19 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>ANGEL EARS</title>
+        <title>Sculptures's Haven</title>
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
-        <div id="navbar-2">
-            <a href="#" id="logo">
-                ANGEL EARS
+        <div id="navbar-1">
+            <a href="#" id="logo">SCULPTURE'S HAVEN
+                <a href="navbar2.html">
+                    Click for Navbar 2
             </a>
             <div>
-                <a href="#">NEWS</a>
-                <a href="#">EDITORIALS</a>
-                <a href="#">MEDIA</a>
+                <a href="#">GALLERY</a>
+                <a href="#">CONTACT</a>
             </div>
-            <a href="#" class="cta-buttom">SUBSCRIBE NOW!</a>
         </div>
     </body>
     </html>
