--- a/exercises/client-navbars/navbar3.html
+++ b/exercises/client-navbars/navbar3.html
@@ -10,10 +10,10 @@
         <div id="navbar-3">
             <div class="content-column">
                 <a href="#" id="logo">
-                    TAILORED SPOOKS
+                    <h2>TAILORED SPOOKS</h2>
                 </a>
                 <div>
-                    BOGO 50% OFF on selcted COSTUMES - USE CODE: BOGO50
+                    <h2>BOGO 50% OFF on selcted COSTUMES - USE CODE: BOGO50<h2>
                 </div>
                 <a href="#" class="cta-buttom">Sign up</a>
             </div>
