--- a/exercises/three-heroes/hero-3.html
+++ b/exercises/three-heroes/hero-3.html
@@ -7,6 +7,16 @@
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
+        <div id="hero-3">
+            <div class="hero-content">
+                <h2>STENGTH</h2>
+                <div>
+                    <a href="index.html">
+                        CLICK FOR STRENGTH
+                    </a>
+                </div>
+            </div>
+        </div>
 
     </body>
     </html>
