--- a/exercises/three-heroes/index.html
+++ b/exercises/three-heroes/index.html
@@ -8,15 +8,45 @@
     </head>
     <body>
         <div id="hero-1">
-            <h1>Hero 1</h1>
+            <h2>FOCUS</h2>
             <a href="hero-2.html">
-                Click for Next Slide
-                <img
-                    src="images/focus.jpg"
-                    alt="A man in the gym exercising"
-                >
-                <h2>FOCUS</h2>
+                CLICK FOR TIPS 
             </a>
+            <div id="hero-1">
+
+                </div>
+            </div>
+            <div id="hero-1-main">
+                <h1>TIPS ON HOW TO BE FOCUSED.</h1>
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing 
+                    elit. Debitis illo adipisci distinctio inventore 
+                    asperiores sit, suscipit neque dignissimos doloribus 
+                    fuga similique in enim possimus voluptas facere qui, 
+                    aspernatur a quidem?
+                </p>
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing 
+                    elit. Debitis explicabo eum quod voluptas eaque quas? 
+                    Culpa aliquid, sequi commodi adipisci eaque sapiente. 
+                    Animi eius voluptate odio ipsum similique nemo 
+                    officiis!
+                </p>
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing 
+                    elit. Debitis illo adipisci distinctio inventore 
+                    asperiores sit, suscipit neque dignissimos doloribus 
+                    fuga similique in enim possimus voluptas facere qui, 
+                    aspernatur a quidem?
+                </p>
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing 
+                    elit. Debitis explicabo eum quod voluptas eaque quas? 
+                    Culpa aliquid, sequi commodi adipisci eaque sapiente. 
+                    Animi eius voluptate odio ipsum similique nemo 
+                    officiis!
+                </p>
+            </div>
         </div>
     </body>
 </html>
