--- a/exercises/three-heroes/hero-2.html
+++ b/exercises/three-heroes/hero-2.html
@@ -8,10 +8,11 @@
     </head>
     <body>
         <div id="hero-2">
-            <h1>Hero 1</h1>
+            <h1>RELAX</h1>
             <a href="hero-3.html">
-                Click here to go to hero 3
+                CLICK TO GO TO RELAX
             </a>
+        </div>
         </div>
         
     </body>
