--- a/exercises/three-heroes/index.html
+++ b/exercises/three-heroes/index.html
@@ -10,11 +10,11 @@
         <div id="hero-1">
             <h2>FOCUS</h2>
             <a href="hero-2.html">
-                CLICK FOR TIPS 
+                CLICK FOR HERO 
             </a>
             <div id="hero-1">
 
-                </div>
+                
             </div>
             <div id="hero-1-main">
                 <h1>TIPS ON HOW TO BE FOCUSED.</h1>
