dropdown-menu-site

--- a/dropdown-menu-site/adoption-page-1.html
+++ b/dropdown-menu-site/adoption-page-1.html
@@ -19,7 +19,7 @@
     <body>
 
         <div id="navbar">
-            <a id="logo" href="#">AdoptMePlz</a>
+            <a id="logo" href="index.html">AdoptMePlz</a>
             <i class="fa-solid fa-dog"></i>
             <div class="dropdown-container">
                 <a href="#">Adopt <i class="fa-solid fa-chevron-down"></i></a>
@@ -53,10 +53,22 @@
                 </div>
             </div>
         </div>
-        <div id="hero-1">
-            <h2>Want To Adopt?</h2>
-            <h4>DON'T WORRY, START HERE!</h4>
-            <a href="#">CLICK TO ADOPT</a>
+        <div id="background-layout">
         </div>
+        <div class="dog-1">
+            <h2>Chloe</h2>
+            <h3>Chloe is a sweet and playful pup with a heart full of love. 
+                She's a small, fluffy dog with big brown eyes that will melt
+                your heart. Chloe loves walks in the park, playing with her 
+                squeaky toys. She's gentle, friendly, and gets along well with 
+                kids and other pets.
+            </h3>
+            <img 
+                src="images/Chloe.jpg" 
+                width="300" 
+                alt="cute puppy in a banana onesie"
+            >
+        </div>
+
     </body>
     </html>
