--- a/dropdown-menu-site/index.html
+++ b/dropdown-menu-site/index.html
@@ -19,7 +19,7 @@
     <body>
 
         <div id="navbar">
-            <a id="logo" href="#">AdoptMePlz</a>
+            <a id="logo" href="index.html">AdoptMePlz</a>
             <i class="fa-solid fa-dog"></i>
             <div class="dropdown-container">
                 <a href="#">Adopt <i class="fa-solid fa-chevron-down"></i></a>
