--- a/dropdown-menu-site/adoption-page-3.html
+++ b/dropdown-menu-site/adoption-page-3.html
@@ -19,7 +19,7 @@
     <body>
 
         <div id="navbar">
-            <a id="logo" href="#">AdoptMePlz</a>
+            <a id="logo" href="index.html">AdoptMePlz</a>
             <i class="fa-solid fa-dog"></i>
             <div class="dropdown-container">
                 <a href="#">Adopt <i class="fa-solid fa-chevron-down"></i></a>
@@ -53,10 +53,6 @@
                 </div>
             </div>
         </div>
-        <div id="hero-1">
-            <h2>Want To Adopt?</h2>
-            <h4>DON'T WORRY, START HERE!</h4>
-            <a href="#">CLICK TO ADOPT</a>
-        </div>
+
     </body>
     </html>
