dropdown-menu-site

--- a/dropdown-menu-site/adoption-page-2.html
+++ b/dropdown-menu-site/adoption-page-2.html
@@ -53,6 +53,22 @@
                 </div>
             </div>
         </div>
+        <div id="background-layout">
+            <div class="dog-1">
+                <h2>Milo</h2>
+                <h3>
+                    Milo is a curious and enegetic dog who's always ready for 
+                    an adventure. He is handsome and smart. Milo loves to have 
+                    books read to him, loves a good snuggle, and quality family
+                     time. He is loyal, protective and full of personality. 
+                </h3>
+                <img 
+                    src="images/Milo.jpg" 
+                    width="300" 
+                    alt="pug puppy with glasses and sweater"
+                >
+            </div>
+        </div>
 
     </body>
-    </html>
+</html>
