--- a/dropdown-menu-site/adoption-page-3.html
+++ b/dropdown-menu-site/adoption-page-3.html
@@ -53,6 +53,23 @@
                 </div>
             </div>
         </div>
+        <div id="background-layout">
+            <div class="dog-1">
+                <h2>Oreo</h2>
+                <h3>
+                    Oreo is a black and white bundle of joy with personality as
+                    sweet as his name. He's playful, affectionate, and always 
+                    up for some fun. Oreo loves belly rubs, chasing his tail, 
+                    and making new friends wherever he goes. He loves nature 
+                    and always the life of the party.
+                </h3>
+                <img 
+                    src="images/Oreo.jpg" 
+                    width="300" 
+                    alt="black and white puppy"
+                >
+            </div>
+        </div>
 
     </body>
-    </html>
+</html>
