--- a/dropdown-menu-site/adoption-page-4.html
+++ b/dropdown-menu-site/adoption-page-4.html
@@ -53,6 +53,24 @@
                 </div>
             </div>
         </div>
+        <div id="background-layout">
+            <div class="dog-1">
+                <h2>Charlie</h2>
+                <h3>
+                    Charlie is a gentle and loyal companion with a calm spirit 
+                    and a big heart. He has a soft coat, soulful eyes, and a 
+                    loving personality that makes everyone feel a home. Charlie
+                    enjoys giving warm snuggles on chilly days , and being by 
+                    your side. he is easygoing and always ready to offer 
+                    comfort.
+                </h3>
+                <img 
+                    src="images/Charlie.jpg" 
+                    width="300" 
+                    alt="a cute puppy with a red collar"
+                >
+            </div>
+        </div>
 
     </body>
-    </html>
+</html>
