--- a/dropdown-menu-site/adoption-page-1.html
+++ b/dropdown-menu-site/adoption-page-1.html
@@ -54,20 +54,22 @@
             </div>
         </div>
         <div id="background-layout">
-        <div class="dog-1">
-            <h2>Chloe</h2>
-            <h3>Chloe is a sweet and playful pup with a heart full of love. 
-                She's a small, fluffy dog with big brown eyes that will melt
-                your heart. Chloe loves walks in the park, playing with her 
-                squeaky toys. She's gentle, friendly, and gets along well with 
-                kids and other pets.
-            </h3>
-            <img 
-                src="images/Chloe.jpg" 
-                width="300" 
-                alt="cute puppy in a banana onesie"
-            >
+            <div class="dog-1">
+                <h2>Chloe</h2>
+                <h3>
+                    Chloe is a sweet and playful pup with a heart full of love. 
+                    She's a small, fluffy dog with big brown eyes that will melt
+                    your heart. Chloe loves walks in the park, playing with her 
+                    squeaky toys. She's gentle, friendly, and gets along well 
+                    with kids and other pets.
+                </h3>
+                <img 
+                    src="images/Chloe.jpg" 
+                    width="300" 
+                    alt="cute puppy in a banana onesie"
+                >
+            </div>
         </div>
 
     </body>
-    </html>
+</html>
