--- a/Projects/restaurant/index.html
+++ b/Projects/restaurant/index.html
@@ -11,6 +11,7 @@
             <h2>Tree House Tales</h2>
                 <h1>A Taste of Paradise</h1>
                 <a href="#">CLICK TO MAKE RESERVATIONS</a>
+                <a href="menu-index.html">MENU</a>
         </div>  
         
     </body>
