--- a/Projects/restaurant/menu-index.html
+++ b/Projects/restaurant/menu-index.html
@@ -14,6 +14,14 @@
                     src="images/Risotto cake with shrimp.jpg"
                     alt="A makeup powder product"
                 >
+                <h1>Risotto Cake w/ Shrimp</h1>
+                <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                     Debitis iste eum nostrum ducimus tempora voluptatem 
+                     fuga minus pariatur rerum, delectus praesentium ullam 
+                     amet nobis explicabo soluta. Asperiores fuga nulla 
+                     reprehenderit.
+                </p>
         </div>
         <div class="card-1">
             <div class="card-container">
@@ -21,6 +29,14 @@
                     src="images/calamari.jpg"
                     alt="A makeup powder product"
                 >
+                <h1>Fried Calamari</h1>
+                <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                     Debitis iste eum nostrum ducimus tempora voluptatem 
+                     fuga minus pariatur rerum, delectus praesentium ullam 
+                     amet nobis explicabo soluta. Asperiores fuga nulla 
+                     reprehenderit.
+                </p>
             </div>
         </div>
         <div class="card-2">
@@ -29,6 +45,14 @@
                         src="images/french bread with shrimp topped with cherry tomatoes.jpg"
                         alt="A makeup powder product"
                     >
+                    <h1>French Bread w/ Shrimp topped with Cherry Tomatoes</h1>
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing 
+                        elit. Debitis iste eum nostrum ducimus tempora 
+                        voluptatem fuga minus pariatur rerum, delectus 
+                        praesentium ullam amet nobis explicabo soluta. 
+                        Asperiores fuga nulla reprehenderit.
+                    </p>
         </div>
         <div class="card-3">
             <div class="card-container">
@@ -36,6 +60,14 @@
                 src="images/lobster stew.jpg"
                 alt="A makeup powder product"
             >
+            <h1>Lobster Stew</h1>
+            <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing 
+                elit. Debitis iste eum nostrum ducimus tempora 
+                voluptatem fuga minus pariatur rerum, delectus 
+                praesentium ullam amet nobis explicabo soluta. 
+                Asperiores fuga nulla reprehenderit.
+            </p>
         </div>
         <div class="card-4">
             <div class="card-container">
@@ -43,6 +75,14 @@
                 src="images/salmon.jpg"
                 alt="A makeup powder product"
             >
+            <h1>Salmon w/ Asparagus and Orzo rice</h1>
+            <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing 
+                elit. Debitis iste eum nostrum ducimus tempora 
+                voluptatem fuga minus pariatur rerum, delectus 
+                praesentium ullam amet nobis explicabo soluta. 
+                Asperiores fuga nulla reprehenderit.
+            </p>
         </div>
         <div class="card-5">
             <div class="card-container">
@@ -50,6 +90,14 @@
                 src="images/scallops-4709349_640.jpg"
                 alt="A makeup powder product"
             >
+            <h1>Scallops</h1>
+            <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing 
+                elit. Debitis iste eum nostrum ducimus tempora 
+                voluptatem fuga minus pariatur rerum, delectus 
+                praesentium ullam amet nobis explicabo soluta. 
+                Asperiores fuga nulla reprehenderit.
+            </p>
         </div>
         <div class="card-6">
             <div class="card-container">
@@ -57,12 +105,28 @@
                 src="images/seafood spaghetti.jpg"
                 alt="A makeup powder product"
             >
+            <h1>Seafood Spaghetti</h1>
+            <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing 
+                elit. Debitis iste eum nostrum ducimus tempora 
+                voluptatem fuga minus pariatur rerum, delectus 
+                praesentium ullam amet nobis explicabo soluta. 
+                Asperiores fuga nulla reprehenderit.
+            </p>
         <div class="card-7">
             <div class="card-container">
             <img
                 src="images/Shrimp and Lobsters with Mussels in a Tomato Broth.jpg"
                 alt="A makeup powder product"
             >
+            <h1>Shrimp and Lobster w/ Muscles in a Tomato Broth</h1>
+            <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing 
+                elit. Debitis iste eum nostrum ducimus tempora 
+                voluptatem fuga minus pariatur rerum, delectus 
+                praesentium ullam amet nobis explicabo soluta. 
+                Asperiores fuga nulla reprehenderit.
+            </p>
         </div>
         <div class="card-8">
             <div class="card-container">
@@ -70,6 +134,14 @@
                 src="images/street shrimp.jpg"
                 alt="A makeup powder product"
             >
+            <h1>Street Shrimp</h1>
+            <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing 
+                elit. Debitis iste eum nostrum ducimus tempora 
+                voluptatem fuga minus pariatur rerum, delectus 
+                praesentium ullam amet nobis explicabo soluta. 
+                Asperiores fuga nulla reprehenderit.
+            </p>
         </div>
         <div class="card-9">
             <div class="card-container">
@@ -77,6 +149,14 @@
                 src="images/seafood fried rice.jpg"
                 alt="A makeup powder product"
             >
+            <h1>Seafood Fried Rice</h1>
+            <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing 
+                elit. Debitis iste eum nostrum ducimus tempora 
+                voluptatem fuga minus pariatur rerum, delectus 
+                praesentium ullam amet nobis explicabo soluta. 
+                Asperiores fuga nulla reprehenderit.
+            </p>
         </div>
             
     </body>
