--- a/Projects/restaurant/index.html
+++ b/Projects/restaurant/index.html
@@ -7,11 +7,23 @@
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
+        <div id="navbar">
+            <a id="logo" href="index.html">TREE HOUSE TALES</a>
+            <i class="fa-solid fa-dog"></i>
+            <div class="dropdown-container">
+                <div class="dropdown-menu">
+                    <a href="index.html">HOME</a>
+                    <a href="menu-index.html">MENU</a>
+                    <a href="#">RESERVATIONS</a>
+                    <a href="#">BEACH CLUB</a>
+                </div>
+            </div>
+        </div>
         <div id="home-page">
             <h2>Tree House Tales</h2>
-                <h1>A Taste of Paradise</h1>
-                <a href="#">CLICK TO MAKE RESERVATIONS</a>
-                <a href="menu-index.html">MENU</a>
+            <h1>A Taste of Paradise</h1>
+            <a href="#">CLICK TO MAKE RESERVATIONS</a>
+            <a href="menu-index.html">MENU</a>
         </div>  
         
     </body>
