--- a/Projects/restaurant/menu-index.html
+++ b/Projects/restaurant/menu-index.html
@@ -7,45 +7,164 @@
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
-        
+
+        <div id="navbar">
+            <a id="logo" href="index.html">TREE HOUSE TALES</a>
+            <i class="fa-solid fa-dog"></i>
+            <div class="dropdown-container">
+                <div class="dropdown-menu">
+                    <a href="index.html">HOME</a>
+                    <a href="menu-index.html">MENU</a>
+                    <a href="#">RESERVATIONS</a>
+                    <a href="#">BEACH CLUB</a>
+                </div>
+            </div>
+        </div>
         <div class="card-0-featured-dish">
             <div class="card-container">
                 <img
                     src="images/Risotto cake with shrimp.jpg"
+                    width="100"
                     alt="A makeup powder product"
                 >
                 <h1>Risotto Cake w/ Shrimp</h1>
                 <p>
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                     Debitis iste eum nostrum ducimus tempora voluptatem 
-                     fuga minus pariatur rerum, delectus praesentium ullam 
-                     amet nobis explicabo soluta. Asperiores fuga nulla 
-                     reprehenderit.
+                    Debitis iste eum nostrum ducimus tempora voluptatem 
+                    fuga minus pariatur rerum, delectus praesentium ullam 
+                    amet nobis explicabo soluta. Asperiores fuga nulla 
+                    reprehenderit.
                 </p>
+            </div>
         </div>
         <div class="card-1">
             <div class="card-container">
                 <img
                     src="images/calamari.jpg"
+                    width="100"
                     alt="A makeup powder product"
                 >
                 <h1>Fried Calamari</h1>
                 <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                     Debitis iste eum nostrum ducimus tempora voluptatem 
-                     fuga minus pariatur rerum, delectus praesentium ullam 
-                     amet nobis explicabo soluta. Asperiores fuga nulla 
-                     reprehenderit.
+                    Lorem ipsum dolor sit, amet consectetur adipisicing 
+                    elit. Debitis iste eum nostrum ducimus tempora 
+                    voluptatem fuga minus pariatur rerum, delectus 
+                    praesentium ullam amet nobis explicabo soluta. 
+                    Asperiores fuga nulla reprehenderit.
                 </p>
             </div>
         </div>
         <div class="card-2">
             <div class="card-container">
+                <img
+                    src="images/french bread with shrimp topped with cherry tomatoes.jpg"
+                    width="100"
+                    alt="A makeup powder product"
+                >
+                <h1>French Bread w/ Shrimp topped with Cherry Tomatoes</h1>
+                <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing 
+                    elit. Debitis iste eum nostrum ducimus tempora 
+                    voluptatem fuga minus pariatur rerum, delectus 
+                    praesentium ullam amet nobis explicabo soluta. 
+                    Asperiores fuga nulla reprehenderit.
+                </p>
+            </div>
+        </div>
+        <div class="card-3">
+            <div class="card-container">
+                <img
+                    src="images/lobster stew.jpg"
+                    width="100"
+                    alt="A makeup powder product"
+                >
+                <h1>Lobster Stew</h1>
+                <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing 
+                    elit. Debitis iste eum nostrum ducimus tempora 
+                    voluptatem fuga minus pariatur rerum, delectus 
+                    praesentium ullam amet nobis explicabo soluta. 
+                    Asperiores fuga nulla reprehenderit.
+                </p>
+            </div>
+        </div>
+        <div class="card-4">
+            <div class="card-container">
+                <img
+                    src="images/salmon.jpg"
+                    width="100"
+                    alt="A makeup powder product"
+                >
+                <h1>Salmon w/ Asparagus and Orzo rice</h1>
+                <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing 
+                    elit. Debitis iste eum nostrum ducimus tempora 
+                    voluptatem fuga minus pariatur rerum, delectus 
+                    praesentium ullam amet nobis explicabo soluta. 
+                    Asperiores fuga nulla reprehenderit.
+                </p>
+            </div>
+        </div>
+        <div class="card-5">
+            <div class="card-container">
+                <img
+                    src="images/scallops-4709349_640.jpg"
+                    width="100"
+                    alt="A makeup powder product"
+                >
+                <h1>Scallops</h1>
+                <p>
+                    Lorem ipsum dolor sit, amet consectetur 
+                    adipisicing elit. Debitis iste eum nostrum 
+                    ducimus tempora voluptatem fuga minus pariatur
+                    rerum, delectus praesentium ullam amet nobis 
+                    explicabo soluta. Asperiores fuga nulla 
+                    reprehenderit.
+                </p>
+            </div>
+        </div>
+        <div class="card-6">
+            <div class="card-container">
+                <img
+                    src="images/seafood spaghetti.jpg"
+                    width="100"
+                    alt="A makeup powder product"
+                >
+                <h1>Seafood Spaghetti</h1>
+                <p>
+                    Lorem ipsum dolor sit, amet consectetur 
+                    adipisicing elit. Debitis iste eum nostrum 
+                    ducimus tempora voluptatem fuga minus 
+                    pariatur rerum, delectus praesentium ullam
+                    amet nobis explicabo soluta. Asperiores 
+                    fuga nulla reprehenderit.
+                </p>
+                <div class="card-7">
+                    <div class="card-container">
+                        <img
+                            src="images/Shrimp and Lobsters with Mussels in a Tomato Broth.jpg"
+                            width="100"
+                            alt="A makeup powder product"
+                        >
+                    </div>
+                </div>
+                <h1>Shrimp and Lobster w/ Muscles in a Tomato Broth</h1>
+                <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing 
+                    elit. Debitis iste eum nostrum ducimus tempora 
+                    voluptatem fuga minus pariatur rerum, delectus 
+                    praesentium ullam amet nobis explicabo soluta. 
+                    Asperiores fuga nulla reprehenderit.
+                </p>
+            </div>
+            <div class="card-8">
+                <div class="card-container">
                     <img
-                        src="images/french bread with shrimp topped with cherry tomatoes.jpg"
+                        src="images/street shrimp.jpg"
+                        width="100"
                         alt="A makeup powder product"
                     >
-                    <h1>French Bread w/ Shrimp topped with Cherry Tomatoes</h1>
+                    <h1>Street Shrimp</h1>
                     <p>
                         Lorem ipsum dolor sit, amet consectetur adipisicing 
                         elit. Debitis iste eum nostrum ducimus tempora 
@@ -53,111 +172,25 @@
                         praesentium ullam amet nobis explicabo soluta. 
                         Asperiores fuga nulla reprehenderit.
                     </p>
-        </div>
-        <div class="card-3">
-            <div class="card-container">
-            <img
-                src="images/lobster stew.jpg"
-                alt="A makeup powder product"
-            >
-            <h1>Lobster Stew</h1>
-            <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing 
-                elit. Debitis iste eum nostrum ducimus tempora 
-                voluptatem fuga minus pariatur rerum, delectus 
-                praesentium ullam amet nobis explicabo soluta. 
-                Asperiores fuga nulla reprehenderit.
-            </p>
-        </div>
-        <div class="card-4">
-            <div class="card-container">
-            <img
-                src="images/salmon.jpg"
-                alt="A makeup powder product"
-            >
-            <h1>Salmon w/ Asparagus and Orzo rice</h1>
-            <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing 
-                elit. Debitis iste eum nostrum ducimus tempora 
-                voluptatem fuga minus pariatur rerum, delectus 
-                praesentium ullam amet nobis explicabo soluta. 
-                Asperiores fuga nulla reprehenderit.
-            </p>
-        </div>
-        <div class="card-5">
-            <div class="card-container">
-            <img
-                src="images/scallops-4709349_640.jpg"
-                alt="A makeup powder product"
-            >
-            <h1>Scallops</h1>
-            <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing 
-                elit. Debitis iste eum nostrum ducimus tempora 
-                voluptatem fuga minus pariatur rerum, delectus 
-                praesentium ullam amet nobis explicabo soluta. 
-                Asperiores fuga nulla reprehenderit.
-            </p>
-        </div>
-        <div class="card-6">
-            <div class="card-container">
-            <img
-                src="images/seafood spaghetti.jpg"
-                alt="A makeup powder product"
-            >
-            <h1>Seafood Spaghetti</h1>
-            <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing 
-                elit. Debitis iste eum nostrum ducimus tempora 
-                voluptatem fuga minus pariatur rerum, delectus 
-                praesentium ullam amet nobis explicabo soluta. 
-                Asperiores fuga nulla reprehenderit.
-            </p>
-        <div class="card-7">
-            <div class="card-container">
-            <img
-                src="images/Shrimp and Lobsters with Mussels in a Tomato Broth.jpg"
-                alt="A makeup powder product"
-            >
-            <h1>Shrimp and Lobster w/ Muscles in a Tomato Broth</h1>
-            <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing 
-                elit. Debitis iste eum nostrum ducimus tempora 
-                voluptatem fuga minus pariatur rerum, delectus 
-                praesentium ullam amet nobis explicabo soluta. 
-                Asperiores fuga nulla reprehenderit.
-            </p>
-        </div>
-        <div class="card-8">
-            <div class="card-container">
-            <img
-                src="images/street shrimp.jpg"
-                alt="A makeup powder product"
-            >
-            <h1>Street Shrimp</h1>
-            <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing 
-                elit. Debitis iste eum nostrum ducimus tempora 
-                voluptatem fuga minus pariatur rerum, delectus 
-                praesentium ullam amet nobis explicabo soluta. 
-                Asperiores fuga nulla reprehenderit.
-            </p>
-        </div>
-        <div class="card-9">
-            <div class="card-container">
-            <img
-                src="images/seafood fried rice.jpg"
-                alt="A makeup powder product"
-            >
-            <h1>Seafood Fried Rice</h1>
-            <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing 
-                elit. Debitis iste eum nostrum ducimus tempora 
-                voluptatem fuga minus pariatur rerum, delectus 
-                praesentium ullam amet nobis explicabo soluta. 
-                Asperiores fuga nulla reprehenderit.
-            </p>
-        </div>
-            
+                </div>
+            </div>
+            <div class="card-9">
+                <div class="card-container">
+                    <img
+                        src="images/seafood fried rice.jpg"
+                        width="100"
+                        alt="A makeup powder product"
+                    >
+                    <h1>Seafood Fried Rice</h1>
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing 
+                        elit. Debitis iste eum nostrum ducimus tempora 
+                        voluptatem fuga minus pariatur rerum, delectus 
+                        praesentium ullam amet nobis explicabo soluta. 
+                        Asperiores fuga nulla reprehenderit.
+                    </p>
+                </div>
+            </div>
+        </div>     
     </body>
 </html>
