--- a/Projects/final-eval/index.html
+++ b/Projects/final-eval/index.html
@@ -7,29 +7,35 @@
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
-        <div class="Container">
-            <div class="single-column">
-                <h3>John and Jane Smith's</h3>
-                <h1>Super Bowl LVIII</h1>
-                <h2>Extravaganza Party</h2>
+        <div id="hero-1">
+            <div class="Container">
+                <div class="single-column">
+                    <h3>John and Jane Smith's</h3>
+                    <h1>Super Bowl LVIII</h1>
+                    <h2>Extravaganza Party</h2>
+                </div>
             </div>
-        </div>
-        <div class="dark-container">
-            <div class="single-column">
-                <h1>VS</h1>
-                <h3>San Francisco 49ers</h3>
-                <h3>Kansas City Chiefs</h3>
+            <div class="dark-container">
+                <div class="single-column">
+                    <h1>VS</h1>
+                    <h3>San Francisco 49ers</h3>
+                    <h3>Kansas City Chiefs</h3>
+                </div>
             </div>
-        </div>
-        <div class="light-container">
-            <div class="single-column">
-                <h1>Sunday, Feb 11 2024 @ 6pm</h1>
-                <h3>Join us for the Ultimate Super Bowl Sunday Bash!</h3>
-                <h3>We'll have hot food, cold drinks, and big screens; 
-                    all that's missing is you!</h3>
-                <h3>The party will be at 1234 Main St, Anytown, USA</h3>
-                
-                <h3>Questions? Call 555.123.4567</h3>
+            <div class="light-container">
+                <div class="single-column">
+                    <h1>Sunday, Feb 11 2024 @ 6pm</h1>
+                    <h3>Join us for the Ultimate Super Bowl Sunday Bash!</h3>
+                    <h3>We'll have hot food, cold drinks, and big screens; 
+                        all that's missing is you!</h3>
+                    <h3>The party will be at 1234 Main St, Anytown, USA</h3>
+                </div>
+                <div class="button">
+                    <a href="#">I can make it!</a>
+                    <a href="#">I can't make it... </a>
+                </div>
+                    <h3>Questions? Call 555.123.4567</h3>
+                </div>
             </div>
         </div>
         
