--- a/Projects/final-eval/index.html
+++ b/Projects/final-eval/index.html
@@ -30,8 +30,10 @@
                         all that's missing is you!</h3>
                     <h3>The party will be at 1234 Main St, Anytown, USA</h3>
                 </div>
-                <div class="button">
+                <div class="button-1">
                     <a href="#">I can make it!</a>
+                </div>
+                <div class="button-2">
                     <a href="#">I can't make it... </a>
                 </div>
                     <h3>Questions? Call 555.123.4567</h3>
