--- a/Projects/final-eval/index.html
+++ b/Projects/final-eval/index.html
@@ -23,7 +23,7 @@
                 </div>
             </div>
             <div class="light-container">
-                <div class="single-column">
+                <div class="single-column-2">
                     <h1>Sunday, Feb 11 2024 @ 6pm</h1>
                     <h3>Join us for the Ultimate Super Bowl Sunday Bash!</h3>
                     <h3>We'll have hot food, cold drinks, and big screens; 
