--- a/Projects/restaurant/index.html
+++ b/Projects/restaurant/index.html
@@ -23,8 +23,9 @@
             <h2>Tree House Tales</h2>
             <h1>A Taste of Paradise</h1>
             <a href="#">CLICK TO MAKE RESERVATIONS</a>
-            <a href="menu-index.html">MENU</a>
-        </div>  
+        </div> 
+        <div id="button-2">
+        <a href="menu-index.html">MENU</a> 
         
     </body>
 </html>
