--- a/Projects/restaurant/index.html
+++ b/Projects/restaurant/index.html
@@ -25,7 +25,16 @@
             <a href="#">CLICK TO MAKE RESERVATIONS</a>
         </div> 
         <div id="button-2">
-        <a href="menu-index.html">MENU</a> 
-        
+            <a href="menu-index.html">MENU</a> 
+        </div>
+        <div id="footer">
+            <div id="footer-navbar">
+                <span>&copy; TREE HOUSE TALES 2025</span>
+                <a href="index.html">HOME</a>
+                <a href="menu-index.html">MENU</a>
+                <a href="#">RESERVATIONS</a>
+                <a href="#">BEACH CLUB</a>
+            </div>
+    
     </body>
 </html>
