--- a/Projects/restaurant/index.html
+++ b/Projects/restaurant/index.html
@@ -16,6 +16,10 @@
                     <a href="menu-index.html">MENU</a>
                     <a href="#">RESERVATIONS</a>
                     <a href="#">BEACH CLUB</a>
+                    <img 
+                    src="images/tree house tales logo.png" 
+                    width="100"
+                    alt="leaf logo">
                 </div>
             </div>
         </div>
