--- a/Projects/restaurant/menu-index.html
+++ b/Projects/restaurant/menu-index.html
@@ -23,172 +23,117 @@
             <div class="card-container">
                 <img
                     src="images/Risotto cake with shrimp.jpg"
-                    width="100"
+                    width="250"
                     alt="A makeup powder product"
                 >
+                <h2>Featured Dish</h2>
                 <h1>Risotto Cake w/ Shrimp</h1>
                 <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Debitis iste eum nostrum ducimus tempora voluptatem 
-                    fuga minus pariatur rerum, delectus praesentium ullam 
-                    amet nobis explicabo soluta. Asperiores fuga nulla 
-                    reprehenderit.
+                   This golden , crispy risotto cake is panned to perfected 
+                   and topped with a tender butter juicy shrimp. It's finished
+                   with a fresh green basil sauce that brings a nice herb green
+                   to balance the pop of color. A mix of comfort and elegance.
                 </p>
+                <h2>25</h2>
             </div>
         </div>
         <div class="card-1">
             <div class="card-container">
                 <img
                     src="images/calamari.jpg"
-                    width="100"
+                    width="240"
                     alt="A makeup powder product"
                 >
                 <h1>Fried Calamari</h1>
-                <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing 
-                    elit. Debitis iste eum nostrum ducimus tempora 
-                    voluptatem fuga minus pariatur rerum, delectus 
-                    praesentium ullam amet nobis explicabo soluta. 
-                    Asperiores fuga nulla reprehenderit.
-                </p>
+                <h2>16</h2>
             </div>
         </div>
         <div class="card-2">
             <div class="card-container">
                 <img
                     src="images/french bread with shrimp topped with cherry tomatoes.jpg"
-                    width="100"
+                    width="240"
                     alt="A makeup powder product"
                 >
                 <h1>French Bread w/ Shrimp topped with Cherry Tomatoes</h1>
-                <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing 
-                    elit. Debitis iste eum nostrum ducimus tempora 
-                    voluptatem fuga minus pariatur rerum, delectus 
-                    praesentium ullam amet nobis explicabo soluta. 
-                    Asperiores fuga nulla reprehenderit.
-                </p>
+                <h2>15</h2>
             </div>
         </div>
         <div class="card-3">
             <div class="card-container">
                 <img
                     src="images/lobster stew.jpg"
-                    width="100"
+                    width="240"
                     alt="A makeup powder product"
                 >
                 <h1>Lobster Stew</h1>
-                <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing 
-                    elit. Debitis iste eum nostrum ducimus tempora 
-                    voluptatem fuga minus pariatur rerum, delectus 
-                    praesentium ullam amet nobis explicabo soluta. 
-                    Asperiores fuga nulla reprehenderit.
-                </p>
+                <h2>25</h2>
             </div>
         </div>
         <div class="card-4">
             <div class="card-container">
                 <img
                     src="images/salmon.jpg"
-                    width="100"
+                    width="240"
                     alt="A makeup powder product"
                 >
                 <h1>Salmon w/ Asparagus and Orzo rice</h1>
-                <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing 
-                    elit. Debitis iste eum nostrum ducimus tempora 
-                    voluptatem fuga minus pariatur rerum, delectus 
-                    praesentium ullam amet nobis explicabo soluta. 
-                    Asperiores fuga nulla reprehenderit.
-                </p>
+                <h2>25</h2>
             </div>
         </div>
         <div class="card-5">
             <div class="card-container">
                 <img
                     src="images/scallops-4709349_640.jpg"
-                    width="100"
+                    width="240"
                     alt="A makeup powder product"
                 >
                 <h1>Scallops</h1>
-                <p>
-                    Lorem ipsum dolor sit, amet consectetur 
-                    adipisicing elit. Debitis iste eum nostrum 
-                    ducimus tempora voluptatem fuga minus pariatur
-                    rerum, delectus praesentium ullam amet nobis 
-                    explicabo soluta. Asperiores fuga nulla 
-                    reprehenderit.
-                </p>
+                <h2>19</h2>
             </div>
         </div>
         <div class="card-6">
             <div class="card-container">
                 <img
                     src="images/seafood spaghetti.jpg"
-                    width="100"
+                    width="240"
                     alt="A makeup powder product"
                 >
                 <h1>Seafood Spaghetti</h1>
-                <p>
-                    Lorem ipsum dolor sit, amet consectetur 
-                    adipisicing elit. Debitis iste eum nostrum 
-                    ducimus tempora voluptatem fuga minus 
-                    pariatur rerum, delectus praesentium ullam
-                    amet nobis explicabo soluta. Asperiores 
-                    fuga nulla reprehenderit.
-                </p>
+                <h2>30</h2>
             </div>
         </div>
         <div class="card-7">
             <div class="card-container">
                 <img
                     src="images/Shrimp and Lobsters with Mussels in a Tomato Broth.jpg"
-                    width="100"
+                    width="240"
                     alt="A makeup powder product"
                 >
                 <h1>Shrimp and Lobster w/ Muscles in a Tomato Broth</h1>
-                <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing 
-                    elit. Debitis iste eum nostrum ducimus tempora 
-                    voluptatem fuga minus pariatur rerum, delectus 
-                    praesentium ullam amet nobis explicabo soluta. 
-                    Asperiores fuga nulla reprehenderit.
-                </p>
+                <h2>20</h2>
             </div>
         </div>
         <div class="card-8">
             <div class="card-container">
                 <img
                     src="images/street shrimp.jpg"
-                    width="100"
+                    width="240"
                     alt="A makeup powder product"
                 >
                 <h1>Street Shrimp</h1>
-                <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing 
-                    elit. Debitis iste eum nostrum ducimus tempora 
-                    voluptatem fuga minus pariatur rerum, delectus 
-                    praesentium ullam amet nobis explicabo soluta. 
-                    Asperiores fuga nulla reprehenderit.
-                </p>
+                <h2>16</h2>
             </div>
         </div>
         <div class="card-9">
             <div class="card-container">
                 <img
                     src="images/seafood fried rice.jpg"
-                    width="100"
+                    width="240"
                     alt="A makeup powder product"
                 >
                 <h1>Seafood Fried Rice</h1>
-                <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing 
-                    elit. Debitis iste eum nostrum ducimus tempora 
-                    voluptatem fuga minus pariatur rerum, delectus 
-                    praesentium ullam amet nobis explicabo soluta. 
-                    Asperiores fuga nulla reprehenderit.
-                </p>
+                <h2>20</h2>
             </div>
         </div>
     </body>
