--- a/Projects/restaurant/menu-index.html
+++ b/Projects/restaurant/menu-index.html
@@ -136,5 +136,13 @@
                 <h2>20</h2>
             </div>
         </div>
+        <div id="footer">
+            <div id="footer-navbar">
+                <span>&copy; TREE HOUSE TALES 2025</span>
+                <a href="index.html">HOME</a>
+                <a href="menu-index.html">MENU</a>
+                <a href="#">RESERVATIONS</a>
+                <a href="#">BEACH CLUB</a>
+            </div>
     </body>
 </html>
