--- a/Projects/restaurant/index.html
+++ b/Projects/restaurant/index.html
@@ -8,7 +8,13 @@
     </head>
     <body>
         <div id="navbar">
-            <a id="logo" href="index.html">TREE HOUSE TALES</a>
+            <a id="logo" href="index.html">
+                <img 
+                    src="images/tree house tales logo.png"
+                    width="100"
+                    alt="leaf logo"
+                >
+            </a>
             <i class="fa-solid fa-dog"></i>
             <div class="dropdown-container">
                 <div class="dropdown-menu">
@@ -16,10 +22,6 @@
                     <a href="menu-index.html">MENU</a>
                     <a href="#">RESERVATIONS</a>
                     <a href="#">BEACH CLUB</a>
-                    <img 
-                    src="images/tree house tales logo.png" 
-                    width="100"
-                    alt="leaf logo">
                 </div>
             </div>
         </div>
