--- a/Projects/restaurant/menu-index.html
+++ b/Projects/restaurant/menu-index.html
@@ -29,7 +29,7 @@
                 <h2>Featured Dish</h2>
                 <h1>Risotto Cake w/ Shrimp</h1>
                 <p>
-                   This golden , crispy risotto cake is panned to perfected 
+                   This golden , crispy risotto cake is panned to perfection 
                    and topped with a tender butter juicy shrimp. It's finished
                    with a fresh green basil sauce that brings a nice herb green
                    to balance the pop of color. A mix of comfort and elegance.
