--- a/Projects/restaurant/index.html
+++ b/Projects/restaurant/index.html
@@ -25,19 +25,23 @@
                 </div>
             </div>
         </div>
-        <div id="home-page">
-            <h2>Tree House Tales</h2>
-            <h1>A Taste of Paradise</h1>
-            <a href="#">CLICK TO MAKE RESERVATIONS</a>
-        </div> 
-        <div id="button-2">
-            <a href="menu-index.html">MENU</a> 
+        <div id="hero">
+            <div id="home-page">
+                <h2>Tree House Tales</h2>
+                <h1>A Taste of Paradise</h1>
+            </div>
+            <div id="button-container">
+                <div class="button">
+                    <a href="#">CLICK TO MAKE RESERVATIONS</a>
+                    <a href="menu-index.html">VIEW MENU</a> 
+                </div>
+            </div>
         </div>
         <div id="footer">
             <div id="footer-navbar">
                 <span>&copy; TREE HOUSE TALES 2025</span>
                 <a href="index.html">HOME</a>
-                <a href="menu-index.html">MENU</a>
+                <a href="menu-index.html">VIEW MENU</a>
                 <a href="#">RESERVATIONS</a>
                 <a href="#">BEACH CLUB</a>
             </div>
